--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h4>Wykańczamy Mieszkania...</h4>
         <h5>...Nie Klientów!</h5>
         <section>
-          <div class="pedzel"> <img src="images/pedzel.png" alt="pedzel" width="90" height="90"></div>
+          <div class="pedzel"> <img src="./images/pedzel.png" alt="pedzel" width="90" height="90"></div>
         </section>
     </main>
     <footer>
